Closed
Bug 1177014
Opened 11 years ago
Closed 6 years ago
Line offsets incorrect for block followed by list
Categories
(Core :: Disability Access APIs, defect)
Core
Disability Access APIs
Tracking
()
RESOLVED
FIXED
mozilla71
| Tracking | Status | |
|---|---|---|
| firefox71 | --- | fixed |
People
(Reporter: Jamie, Assigned: morgan)
References
(Blocks 1 open bug)
Details
Attachments
(2 files)
|
1003 bytes,
patch
|
Details | Diff | Splinter Review | |
|
47 bytes,
text/x-phabricator-request
|
Details | Review |
Str:
1. Open this URL: data:text/html,<div>block</div><ul><li>li</li></ul>
2. Retrieve the accessible for the document.
3. Retrieve the line offsets at offset 0.
Expected: (0, 1)
Actual: (0, 2)
4. Retrieve the line offsets at offset 1.
Result (correct): (1, 2)
Impact: This causes ATs to report that the list is part of the line with the block when it isn't.
Comment 1•9 years ago
|
||
here's an example how a test may be constructed: https://dxr.mozilla.org/mozilla-central/source/accessible/tests/mochitest/text/test_lineboundary.html#33,34-36
as long as we have a test case, the next step is to figure out where's out expectations are broken, I suppose that a start point for the debugging could be at HyperTextAccessible::FindOffset.
| Reporter | ||
Comment 2•7 years ago
|
||
Here's a patch which adds a (currently failing) test case for this bug.
Assignee: nobody → jteh
| Reporter | ||
Updated•7 years ago
|
Assignee: jteh → nobody
| Assignee | ||
Updated•7 years ago
|
Assignee: nobody → mreschenberg
| Assignee | ||
Comment 3•6 years ago
|
||
Pushed by mreschenberg@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/7aa2279f941c
Modify TransformOffset to correctly report bullet offsets, despite incorrect return from PeekOffset. r=Jamie
Comment 5•6 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 6 years ago
status-firefox71:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
You need to log in
before you can comment on or make changes to this bug.
Description
•