Bug 1177014: Modify TransformOffset to correctly report bullet offsets, despite incorrect return from PeekOffset. r=Jamie

Differential Revision: https://phabricator.services.mozilla.com/D46490